Issue #1949: Fixed an issue with the preview not showing up in Firefox, and an issue with images referenced from css files not showing up.

--- a/core/modules/color/css/color.admin.css
+++ b/core/modules/color/css/color.admin.css
@@ -80,6 +80,7 @@
 #preview {
   width: 100%;
   height: 100vh;
+  border: 1px black solid;
 }
 
 @media all and (min-width: 48em) {
